# 2D-opengl-renderer

./: CMakeLists.txt  box.h  main.cpp  my_game.h  physics_game.h
include/: VAO.h  application.h  buffer.h  camera2D.h  framebuffer.h  gui.h  mesh2D.h  model.h  shader.h  sprite.h  texture.h  transform.h  window.h
resource/shaders/: default.vert
resource/shaders/framebuffer/: f.frag  f.vert
src/: VAO.cpp  application.cpp  buffer.cpp  camera2D.cpp  framebuffer.cpp  gui.cpp  main.cpp  mesh2D.cpp  model.cpp  shader.cpp  sprite.cpp  texture.cpp  transform.cpp  window.cpp
